# autolock

./: .gitignore  README.md  README.txt  idm.py  idmtest.py  lock.sh  setting_change.cpp
3D_Models/: GearBox_Base.stl  GearBox_Lid.stl  Gear_KeySide.stl  Gear_MotorSide.stl  RaspiCase_Lid.stl  lock_raspibase v10.stl  lock_raspilid v7.stl  lock_raspilid v8.stl
Board_data/: autolock.brd  autolock.sch
C/: close  double  down_open  open  sabo_close.c  sabo_open.c  up_close  up_open
C++/: test
C++/src/: auto_lock.cpp  switch.hpp
C/src/autolock/: down_close.c  down_open.c  up_close.c
C/src/home_gate/: close  home_close.c  home_open.c  lock_open.c  open
C/src/room_lock/: sabo_open.c
Python/: main.py
bk/: botten  botten.c  debugBo  debugBo.c  loop.c  nohup.out  test  test.c
direct_version/: README.txt  lock.sh
direct_version/C/: Makefile  close.c  open.c
direct_version/C++/src/: auto_lock.hpp  switch.cpp
direct_version/Python/: direct_lock.service
gear_version/: CMakeLists.txt  autolock  autolock_setting.json  down_close  nohup.out  reray_off  reray_off.cpp  reray_on  setup.sh
gear_version/etc/: authorize_db_setting.json  autolock_setting.json
gear_version/include/: authorize_user.h  autolock_setting.h  change_setting.h  control_servo.h  line_api.h  min_mqtt.h  slack_api.h  time_utils.h  user_info.h
gear_version/service/: autolock.service
gear_version/src/: Makefile  authorize_user.cpp  autolock.cpp  autolock_setting.cpp  change_setting  change_setting.cpp  control_servo.cpp  control_servo.h  line_api.cpp  min_mqtt.cpp  min_mqtt.h  slack_api.cpp  time_utils.cpp  up_open.c
gear_version/src/service/: autolock.service
gear_version/src/test_code/: CMakeLists.txt  db_connection.cpp  line_test.cpp  read_sw  read_sw.cpp  relay_off  relay_off.cpp  relay_on.cpp  slack_test.cpp  up_open.py
old_version/C/: close.c
old_version/C++/: test.cpp
old_version/Python/: read_idm.py
pcb_data/: READMD.md  autolock.brd  autolock.sch
py_autolc/: OpCl.py  idma.py  test.py
